# effort

./: .dockerignore  .env  Dockerfile  alembic.ini  docker-compose.yml  interview_bpmn.db  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a466bce3893b_initial_migration_create_tables.py
app/: crud.py  db.py  main.py  models.py  schemas.py  users.py
app/routers/: auth.py  interviews.py  wizard.py
app/templates/: base.html
app/templates/wizard/: phase_1.html  phase_2.html  phase_3.html  phase_4.html  phase_5.html  review.html
